fix: pre block overflow

--- a/resources/skins.citizen.styles/common/common.less
+++ b/resources/skins.citizen.styles/common/common.less
@@ -66,6 +66,7 @@ pre,
 	padding: 1rem;
 	/* Wrap lines in overflow. T2260, T103780 */
 	white-space: pre-wrap;
+	word-break: break-word;
 }
 
 input,
